# refl

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/deserialize/: CMakeLists.txt  deserialize.cpp
examples/enums/: CMakeLists.txt  enums.cpp
examples/factory/: CMakeLists.txt  factory.cpp
examples/functions/: CMakeLists.txt  functions.cpp
examples/serialization/: CMakeLists.txt  serialization.cpp
include/refl/: refl.hpp
src/: attribute.cpp  plugin.cpp
tests/: CMakeLists.txt  test_class.cpp  test_enum.cpp
